# urirun-connector-watchdog

./: README.md  pyproject.toml
tests/: test_genuine_wait.py  test_watchdog.py
urirun_connector_watchdog/: __init__.py  core.py
urirun_connector_watchdog.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
